fixed viewport unit fail on mobile. Used js window.innerHeight

--- a/app/scss/_intro.scss
+++ b/app/scss/_intro.scss
@@ -1,5 +1,6 @@
 .intro {
-    height: 100vh;
+    height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+    height: calc(var(--vh, 1vh) * 100); /*--vh is suitable for mobile users with address bars. Declared by javascript window.innerHeight, that represents the browser's height*/
     font-weight:400;
     background-color:  rgba(29, 28, 26, 0.96);
     padding: 0 1rem 0 1rem;
